--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -73,6 +73,7 @@
   &.modal-nft-container,
   &.modal-media-container,
   &.modal-search-container {
+    animation: none;
     background: transparent;
     box-shadow: none;
     height: 100%;
