--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -516,21 +516,26 @@
       }
 
       .platform-title {
+        align-items: center;
+        display: flex;
+        gap: .15rem;
         font-weight: 500;
         width: 100%;
+
+        .icon-verified {
+          border-radius: 50%;
+          height: .9rem;
+          mask-image: conic-gradient(from 0deg, rgba(255, 255, 255, .85), rgba(255, 255, 255, .5));
+          mask-size: cover;
+          padding: 0;
+          width: .9rem;
+        }
       }
 
       .platform-handle {
-        display: flex;
-        align-items: center;
-        gap: .1rem;
         color: $gray-color;
         font-size: .6rem;
         width: 100%;
-        .icon-verified {
-          width: .8rem;
-          height: .8rem;
-        }
       }
 
       .platform-action {
