--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -747,12 +747,19 @@
       }
 
       h2 {
-        font-size: .8rem;
+        font-size: .9rem;
         font-weight: 700;
       }
 
       h3 {
-        font-size: .6rem;
+        font-size: .8rem;
+        font-weight: 700;
+      }
+
+      h4,
+      h5,
+      h6 {
+        font-size: .75rem;
         font-weight: 700;
       }
 
