--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1115,7 +1115,8 @@
   }
 
   // TallyDAO Widget
-  .profile-widget-tally {
+  .profile-widget-tally,
+  .profile-widget-bankless {
     max-height: 15rem;
     overflow-x: hidden;
     position: relative;
@@ -1191,8 +1192,11 @@
           background: $bg-color;
           border-radius: 50%;
           height: 1.2rem;
-          width: 1.2rem;
-
+          width: 1.2rem; 
+          font-size: 1.1rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           .img-placeholder {
             border-radius: 50%;
             height: 100%;
