--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -649,6 +649,7 @@
 
   // Modal Gitcoin, Talent
   &.modal-gitcoin-container,
+  &.modal-efp-container
   &.modal-talent-container {
     .stamp-item {
       gap: .5rem;
